Update portfolio website with enhanced navigation, improved audio source, and refined content. Added new sections and descriptions for better user engagement.

--- a/index.html
+++ b/index.html
@@ -106,19 +106,21 @@
 <body>
 
 <!-- Musik Estetik -->
+<!-- Musik Aesthetic -->
 <audio autoplay loop hidden>
-  <source src="https://cdn.pixabay.com/download/audio/2022/10/25/audio_4c8b6cfd69.mp3" type="audio/mpeg">
+  <source src="https://cdn.pixabay.com/download/audio/2023/03/02/audio_1d7e3c9c42.mp3" type="audio/mpeg">
 </audio>
 
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#home">NAUFAL</a>
+    <a class="navbar-brand fw-bold" href="#home">NAUFAL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="nav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#about">Tentang</a></li>
+      <ul class="navbar-nav ms-auto gap-lg-2">
+        <li class="nav-item"><a class="nav-link" href="#home">Beranda</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">Tentang Saya</a></li>
         <li class="nav-item"><a class="nav-link" href="#pendidikan">Pendidikan</a></li>
         <li class="nav-item"><a class="nav-link" href="#aktivitas">Aktivitas</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Kontak</a></li>
@@ -131,13 +133,17 @@
 
 <section id="home" class="hero">
   <div class="container">
-    <div class="glass p-4 text-center reveal">
+    <div class="glass p-5 text-center reveal">
       <div class="avatar">NA</div>
       <h1>Naufal Alfarizi</h1>
       <p class="lead">
-        Saya adalah siswa kelas X yang menyukai tantangan dan proses pembelajaran.
-        Saya memiliki ketertarikan besar terhadap Matematika karena melatih logika
-        dan kemampuan pemecahan masalah secara sistematis.
+        Selamat datang di website portofolio pribadi saya.
+        Website ini berisi informasi mengenai latar belakang pendidikan,
+        minat, serta aktivitas yang sedang saya jalani sebagai siswa kelas X.
+      </p>
+      <p class="text-muted">
+        Gunakan menu navigasi di bagian atas untuk berpindah ke setiap bagian halaman
+        seperti Tentang Saya, Pendidikan, Aktivitas, dan Kontak.
       </p>
     </div>
   </div>
@@ -186,9 +192,16 @@
 <section id="contact" class="section">
   <div class="container">
     <div class="glass p-4 reveal">
-      <div class="section-title"><span></span><h2>Kontak</h2></div>
-      <p>Email: <a href="mailto:naufalalfarizi320@gmail.com">naufalalfarizi320@gmail.com</a></p>
-      <p>Instagram: <a href="https://instagram.com/naufal_anak_baikk" target="_blank">@naufal_anak_baikk</a></p>
+      <div class="section-title"><span></span><h2>Kontak & Media Sosial</h2></div>
+      <p>
+        Saya dapat dihubungi melalui media berikut untuk keperluan komunikasi,
+        kerja sama, atau sekadar berbagi pengalaman.
+      </p>
+      <ul>
+        <li>Email: <a href="mailto:naufalalfarizi320@gmail.com">naufalalfarizi320@gmail.com</a></li>
+        <li>Instagram Utama: <a href="https://instagram.com/nalfzi_" target="_blank">@nalfzi_</a></li>
+        <li>Instagram Bisnis: <a href="https://instagram.com/naufal_anak_baikk" target="_blank">@naufal_anak_baikk</a></li>
+      </ul>
     </div>
   </div>
 </section>
