--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
       background:linear-gradient(135deg,var(--accent2),var(--accent));
     }
 
-    .mini-card{ padding:18px;height:100%; }
+    .mini-card{ padding:18px;height:100%; transition:.3s ease; }
+    .mini-card:hover{ transform:translateY(-6px); box-shadow:0 20px 50px rgba(0,0,0,.35); }
+    .edu-img{ width:100%; height:180px; object-fit:cover; border-radius:16px; margin-bottom:12px; }
+    .icon-badge{ display:inline-flex; align-items:center; gap:.4rem; padding:.35rem .7rem; border-radius:999px; background:rgba(255,255,255,.08); font-size:.8rem; margin-bottom:8px; }
     .mini-card h6{ font-weight:700; }
     .mini-card p{ color:var(--muted); }
 
@@ -134,6 +137,11 @@
 <section id="home" class="hero">
   <div class="container">
     <div class="glass p-5 text-center reveal">
+      <div class="d-flex justify-content-center gap-2 mb-3">
+        <span class="icon-badge"><i class="bi bi-lightning-charge"></i> Logika</span>
+        <span class="icon-badge"><i class="bi bi-tree"></i> Alam</span>
+        <span class="icon-badge"><i class="bi bi-laptop"></i> Digital</span>
+      </div>
       <div class="avatar">NA</div>
       <h1>Naufal Alfarizi</h1>
       <p class="lead">
@@ -168,9 +176,27 @@
     <div class="glass p-4 reveal">
       <div class="section-title"><span></span><h2>Riwayat Pendidikan</h2></div>
       <div class="row g-3">
-        <div class="col-lg-4"><div class="soft mini-card"><h6>SD</h6><p>SDN 26 Tanjung Batu, Desa Tanjung Batu, Kabupaten Kerinci, Provinsi Jambi.</p></div></div>
-        <div class="col-lg-4"><div class="soft mini-card"><h6>SMP</h6><p>SMPN 6 Kerinci, Jujun, Kabupaten Kerinci, Provinsi Jambi.</p></div></div>
-        <div class="col-lg-4"><div class="soft mini-card"><h6>SMA</h6><p>SMAN 4 Sungai Penuh. Aktif dalam Tim IT dan pengembangan diri di bidang akademik serta digital.</p></div></div>
+        <div class="col-lg-4">
+          <div class="soft mini-card">
+            <img class="edu-img" src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f" alt="Sekolah Dasar">
+            <h6>SD</h6>
+            <p>SDN 26 Tanjung Batu, Desa Tanjung Batu, Kabupaten Kerinci, Provinsi Jambi. Sejak SD saya menyukai pelajaran yang melibatkan logika.</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="soft mini-card">
+            <img class="edu-img" src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b" alt="Sekolah Menengah Pertama">
+            <h6>SMP</h6>
+            <p>SMPN 6 Kerinci, Jujun, Kabupaten Kerinci, Provinsi Jambi. Minat terhadap Matematika dan analisis logis semakin berkembang.</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="soft mini-card">
+            <img class="edu-img" src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1" alt="Sekolah Menengah Atas">
+            <h6>SMA</h6>
+            <p>SMAN 4 Sungai Penuh. Aktif dalam Tim IT serta fokus pada pengembangan akademik dan keterampilan digital.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -223,3 +249,4 @@
 
 </body>
 </html>
+a
