Update portfolio website with enhanced personal descriptions, new interest sections, and improved call-to-action buttons for better engagement.

--- a/index.html
+++ b/index.html
@@ -137,22 +137,34 @@
 <section id="home" class="hero">
   <div class="container">
     <div class="glass p-5 text-center reveal">
-      <div class="d-flex justify-content-center gap-2 mb-3">
-        <span class="icon-badge"><i class="bi bi-lightning-charge"></i> Logika</span>
-        <span class="icon-badge"><i class="bi bi-tree"></i> Alam</span>
-        <span class="icon-badge"><i class="bi bi-laptop"></i> Digital</span>
+      <div class="d-flex justify-content-center flex-wrap gap-2 mb-3">
+        <span class="icon-badge"><i class="bi bi-lightning-charge"></i> Logika & Analisis</span>
+        <span class="icon-badge"><i class="bi bi-tree"></i> Pecinta Alam</span>
+        <span class="icon-badge"><i class="bi bi-laptop"></i> Digital & IT</span>
+        <span class="icon-badge"><i class="bi bi-controller"></i> Game & Strategi</span>
       </div>
       <div class="avatar">NA</div>
       <h1>Naufal Alfarizi</h1>
       <p class="lead">
-        Selamat datang di website portofolio pribadi saya.
-        Website ini berisi informasi mengenai latar belakang pendidikan,
-        minat, serta aktivitas yang sedang saya jalani sebagai siswa kelas X.
+        Selamat datang di website portofolio pribadi saya. Website ini dibuat sebagai ruang
+        untuk memperkenalkan diri saya secara lebih dekat, mulai dari latar belakang pendidikan,
+        minat yang saya tekuni, hingga aktivitas yang sedang saya jalani sebagai siswa kelas X.
+        Saya percaya bahwa setiap proses belajar adalah perjalanan panjang yang membentuk
+        karakter, kedisiplinan, serta pola pikir seseorang.
       </p>
-      <p class="text-muted">
-        Gunakan menu navigasi di bagian atas untuk berpindah ke setiap bagian halaman
-        seperti Tentang Saya, Pendidikan, Aktivitas, dan Kontak.
+      <p class="lead">
+        Ketertarikan saya pada Matematika dan logika membuat saya terbiasa berpikir terstruktur
+        dan fokus pada solusi. Sementara itu, kecintaan saya terhadap alam membantu menjaga
+        keseimbangan antara pikiran, emosi, dan semangat belajar.
       </p>
+      <div class="d-flex justify-content-center gap-3 mt-4">
+        <a href="#pendidikan" class="btn btn-warning rounded-pill fw-bold px-4">
+          <i class="bi bi-book"></i> Lihat Pendidikan
+        </a>
+        <a href="#contact" class="btn btn-outline-light rounded-pill fw-bold px-4">
+          <i class="bi bi-chat-dots"></i> Hubungi Saya
+        </a>
+      </div>
     </div>
   </div>
 </section>
@@ -162,11 +174,24 @@
     <div class="glass p-4 reveal">
       <div class="section-title"><span></span><h2>Tentang Saya</h2></div>
       <p class="lead">
-        Saya merupakan siswa kelas X yang memiliki minat besar pada pembelajaran berbasis logika.
-        Sejak sekolah dasar, saya menyukai pelajaran yang menuntut pemikiran analitis, khususnya Matematika.
-        Saat ini saya aktif dalam organisasi Tim IT SMAN 4 Sungai Penuh.
-        Selain itu, saya menyukai alam karena memberikan ketenangan dan membantu menjaga fokus.
+        Saya merupakan siswa kelas X yang memiliki semangat belajar tinggi dan ketertarikan
+        besar terhadap pelajaran yang menuntut pemikiran logis, khususnya Matematika. Sejak
+        sekolah dasar, saya terbiasa menyukai tantangan yang melatih ketelitian, konsistensi,
+        serta keberanian dalam mencoba berbagai pendekatan penyelesaian masalah.
       </p>
+      <p class="lead">
+        Saat ini saya aktif dalam Tim IT SMAN 4 Sungai Penuh. Melalui organisasi ini, saya
+        belajar tentang kerja sama tim, tanggung jawab, serta pengenalan teknologi dasar yang
+        sangat relevan dengan perkembangan zaman. Di luar kegiatan akademik, saya juga
+        menyukai alam karena memberikan ketenangan dan membantu saya menjaga fokus.
+      </p>
+      <div class="d-flex flex-wrap gap-2 mt-3">
+        <span class="icon-badge">Disiplin</span>
+        <span class="icon-badge">Konsisten</span>
+        <span class="icon-badge">Berpikir Logis</span>
+        <span class="icon-badge">Tanggung Jawab</span>
+        <span class="icon-badge">Mau Belajar</span>
+      </div>
     </div>
   </div>
 </section>
@@ -207,10 +232,24 @@
     <div class="glass p-4 reveal">
       <div class="section-title"><span></span><h2>Minat & Aktivitas</h2></div>
       <p class="lead">
-        Saya menyukai dunia permainan digital sebagai sarana melatih strategi dan analisis.
-        Saya juga aktif berbisnis secara daring sebagai penjual kebutuhan game melalui Instagram
-        <b>@naufal_anak_baikk</b> sejak Maret 2023, yang membantu saya belajar mandiri secara finansial.
+        Saya memiliki minat yang cukup besar terhadap dunia permainan digital. Bagi saya,
+        game bukan hanya sekadar hiburan, tetapi juga sarana untuk melatih strategi, fokus,
+        serta kemampuan mengambil keputusan dengan cepat dan tepat.
       </p>
+      <p class="lead">
+        Selain itu, saya juga aktif berwirausaha secara daring sebagai penjual kebutuhan game
+        melalui Instagram <b>@naufal_anak_baikk</b> sejak Maret 2023. Dari aktivitas ini,
+        saya belajar mengelola keuangan, berkomunikasi dengan pelanggan, serta menumbuhkan
+        sikap mandiri dan tanggung jawab.
+      </p>
+      <div class="d-flex gap-3 mt-3">
+        <a href="https://instagram.com/nalfzi_" target="_blank" class="btn btn-outline-warning rounded-pill fw-bold">
+          <i class="bi bi-instagram"></i> Instagram Utama
+        </a>
+        <a href="https://instagram.com/naufal_anak_baikk" target="_blank" class="btn btn-outline-light rounded-pill fw-bold">
+          <i class="bi bi-shop"></i> Instagram Bisnis
+        </a>
+      </div>
     </div>
   </div>
 </section>
@@ -249,4 +288,3 @@
 
 </body>
 </html>
-a
